//!file:grafbase/options.proto
syntax = "proto2";

import "google/protobuf/descriptor.proto";

package grafbase.graphql;

extend google.protobuf.MessageOptions {
  optional string object_directives = 58301;
  optional string input_object_directives = 58302;
}

extend google.protobuf.FieldOptions {
  optional string output_field_directives = 58301;
  optional string input_field_directives = 58302;
}

extend google.protobuf.EnumOptions {
  optional string enum_directives = 58301;
}

extend google.protobuf.EnumValueOptions {
  optional string enum_value_directives = 58301;
}

extend google.protobuf.ServiceOptions {
  optional bool default_to_query_fields = 58301;
  optional bool default_to_mutation_fields = 58302;
  optional string subgraph_name = 58303;
}

extend google.protobuf.MethodOptions {
  optional string directives = 58301;
  optional bool is_query = 58302;
  optional bool is_mutation = 58303;
}

//!file:no_services.proto
syntax = "proto3";

import "grafbase/options.proto";

package example;

// Just messages and enums, no services
message User {
  string id = 1;
  string name = 2;
  UserStatus status = 3;
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
}

enum UserStatus {
  UNKNOWN = 0;
  ACTIVE = 1;
  INACTIVE = 2;
}